# wfwdiff

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: CMakeLists.txt  autodiff_gradient_descent.cpp
tests/: CMakeLists.txt  test_autodiff.cpp  test_avx2_math.cpp  test_scalar_autodiff.cpp  test_vectorised_diff.cpp
wfwdiff/: CMakeLists.txt  autodiff.hpp  numerics.hpp  vector.hpp  wfwdiff.hpp
wfwdiff/vector/: util.h  vector.hpp  vector_avx2.hpp  vector_base.hpp
